// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 40,
        },
        {
          "height": 40,
        },
        {
          "borderColor": "#74AC00",
          "borderWidth": 3,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 22,
        },
        {
          "height": 22,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays user image correctly 1`] = `
<FasterImageView
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 40,
        },
        {
          "height": 40,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;
